--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,11 +31,18 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>&amp;File</string>
     </property>
     <addaction name="action_Open"/>
    </widget>
+   <widget class="QMenu" name="menu_Playback">
+    <property name="title">
+     <string>&amp;Playback</string>
+    </property>
+    <addaction name="actionLoop"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menu_Playback"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -49,6 +56,17 @@
   <action name="action_Open">
    <property name="text">
     <string>&amp;Open...</string>
+   </property>
+  </action>
+  <action name="actionLoop">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Loop</string>
    </property>
   </action>
  </widget>
