--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -124,7 +124,7 @@
   <customwidget>
    <class>SoundPlayerWidget</class>
    <extends>QWidget</extends>
-   <header>soundplayerwidget.hpp</header>
+   <header>SoundPlayerWidget.hpp</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
