Move AudioPlayerWidget from UI file to source

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -14,11 +14,7 @@
    <string>NoLifeExplorer</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="AudioPlayerWidget" name="soundPlayerWidget" native="true"/>
-    </item>
-   </layout>
+   <layout class="QVBoxLayout" name="verticalLayout"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -101,14 +97,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>AudioPlayerWidget</class>
-   <extends>QWidget</extends>
-   <header>AudioPlayerWidget.hpp</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
